feat-swagger: document api for user
